--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" type="text/css" href="css/estilo.css">
 
   <!-- Titulo -->
-  <title>Música para todos - Spotify</title>
+  <title>Recriando - Spotify</title>
 
   <!-- Favicon -->
   <link rel="icon" href="imagens/favicon.png">
